# ream

./: .clippy.toml  .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cross  Makefile  README.md  compose.override.yml  find_alloys.ps1  lean_run.sh  logs_1.txt  run_check.ps1  run_demo.ps1  rustc-ice-2026-04-02T01_12_17-16398.txt  rustc-ice-2026-04-02T01_22_21-97.txt  rustc-ice-2026-04-04T01_48_42-50413.txt  rustfmt.toml  start_devnet.sh  stop_devnet.sh  tomlfmt.toml
crates/common/da_node/: Cargo.toml
crates/common/da_node/src/: error.rs  ingest.rs  lib.rs  service.rs  store.rs  verifier.rs
crates/common/data_availability/: Cargo.toml
crates/common/data_availability/src/: checker.rs  lib.rs  pending.rs
crates/common/lean_chain/: Cargo.toml
crates/common/lean_chain/src/: staker.rs
crates/common/metrics/: Cargo.toml
crates/common/metrics/lean/: Cargo.toml  compose.yml
crates/common/metrics/lean/src/: helpers.rs  lib.rs
crates/common/metrics/src/: beacon.rs  common.rs  lean.rs  lib.rs
crates/common/network_spec/: Cargo.toml
crates/common/network_spec/src/: b32_hex.rs  cli.rs  fork_schedule.rs  forks.rs  identity.rs  lib.rs  networks.rs
crates/common/node/: Cargo.toml  build.rs
crates/common/node/src/: lib.rs  network_channel.rs  peer.rs
crates/common/peer_management/: Cargo.toml
crates/common/peer_management/src/: peer.rs
crates/common/reth/: Cargo.toml
crates/common/reth/src/: fork_choice.rs  handle.rs  lib.rs  payload.rs
crates/common/sync/: Cargo.toml
crates/common/sync/src/: checkpoint.rs  lib.rs
crates/common/sync_committee_pool/: Cargo.toml
crates/common/sync_committee_pool/src/: lib.rs
crates/common/task_executor/: Cargo.toml
crates/common/task_executor/src/: lib.rs
crates/crypto/keystore/: Cargo.toml
crates/crypto/keystore/assets/: TestKeystore.json
crates/crypto/keystore/src/: decrypt.rs  encrypted_keystore.rs  hex_serde.rs  hmac.rs  keystore.rs  lean_keystore.rs  lib.rs  pbkdf2.rs  salsa.rs  scrypt.rs
crates/crypto/post_quantum/: Cargo.toml
crates/crypto/post_quantum/src/: lib.rs
crates/da/beacon/: Cargo.toml
crates/da/beacon/src/: client.rs  iface.rs  lib.rs
crates/da/errors/: Cargo.toml
crates/da/errors/src/: lib.rs
crates/da/networking/: Cargo.toml
crates/da/networking/src/: blob_schedule.rs  gossip.rs  lib.rs  reconstruct.rs  req_resp.rs  service.rs
crates/da/storage/: Cargo.toml
crates/da/storage/src/: cache.rs  column.rs  lib.rs  prune.rs  slot_index.rs
crates/networking/discv5/: Cargo.toml
crates/networking/discv5/src/: config.rs  discovery.rs  eth2.rs  lean.rs  lib.rs  subnet.rs
crates/networking/gossipsub/: Cargo.toml
crates/networking/gossipsub/src/: config.rs  handler.rs  lib.rs  protocol.rs  snappy.rs  topics.rs  types.rs
crates/networking/p2p/: Cargo.toml
crates/networking/p2p/resources/: bootnodes_holesky.yaml  bootnodes_hoodi.yaml  bootnodes_sepolia.yaml  lean_peers.yaml
crates/networking/p2p/src/: bootnodes.rs  channel.rs  config.rs  constants.rs  discovery.rs  lib.rs  network.rs  network_state.rs  node.rs  util.rs  utils.rs
crates/networking/syncer/: Cargo.toml
crates/networking/syncer/src/: lib.rs
crates/rpc/: Cargo.toml
crates/rpc/beacon/: Cargo.toml
crates/rpc/beacon/src/: lib.rs  server.rs
crates/rpc/beacon/src/routes/: mod.rs  (+3 more)
crates/rpc/common/src/: server.rs
crates/rpc/da/: Cargo.toml
crates/rpc/da/src/: lib.rs  server.rs  tests.rs
crates/rpc/lean/: Cargo.toml
crates/rpc/lean/src/: aggregator_controller.rs  lib.rs  server.rs
crates/rpc/src/: config.rs  lib.rs  routes.rs
crates/rpc/src/handlers/: blob_sidecar.rs  block.rs  checkpoint.rs  committee.rs  config.rs  duties.rs  fork.rs  genesis.rs  header.rs  identity.rs  light_client.rs  mod.rs  peer_count.rs  peers.rs  pool.rs  prepare_beacon_proposer.rs  randao.rs  root.rs  state.rs  validator.rs
crates/rpc/src/routes/: beacon.rs  config.rs  debug.rs  mod.rs  node.rs
crates/rpc/src/types/: errors.rs  genesis.rs  id.rs  mod.rs  query.rs  request.rs  response.rs
crates/rpc/src/utils/: chain.rs  error.rs  mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: cache.rs  config.rs  db.rs  dir.rs  errors.rs  lib.rs  redb_impl.rs  redb_interface.rs
crates/storage/src/beacon/: db.rs
crates/storage/src/db/: beacon.rs  lean.rs  mod.rs
crates/storage/src/lean/: db.rs
crates/storage/src/tables/: banned_peers.rs  beacon_block.rs  beacon_state.rs  blobs_and_proofs.rs  field.rs  genesis_time.rs  mod.rs  slashing_pool.rs  slot_index.rs  ssz_encoder.rs  table.rs
testing/beacon-api/: Cargo.toml
testing/beacon-api/src/: beacon_api.rs  lib.rs  schema.rs  test_data.rs  test_utils.rs
testing/beacon-api/tests/: beacon_api.rs  committee.rs  serialization.rs  validate_block.rs
testing/beacon-api/tests/assets/: block.json
testing/ef-tests/: Cargo.toml  Makefile
testing/ef-tests/src/: utils.rs
testing/ef-tests/src/macros/: epoch_processing.rs  finality.rs  fork_choice.rs  merkle_proof.rs  mod.rs  operations.rs  peerdas.rs  random.rs  rewards.rs  sanity_blocks.rs  sanity_slots.rs  ssz_static.rs
testing/ef-tests/tests/: serialization.rs  tests.rs
testing/ef-tests/tests/assets/: block.json
testing/ef-tests/tests/oapi-tests/: tests.rs
testing/gossip-validation/: Cargo.toml
testing/gossip-validation/tests/: gossip_integration_test.rs  validate_block.rs
testing/lean-spec-tests/: Cargo.toml  Makefile
testing/lean-spec-tests/src/: fork_choice.rs  justifiability.rs  lib.rs  slot_clock.rs  ssz.rs  ssz_test.rs  state_transition.rs  sync.rs  verify_signatures.rs
testing/lean-spec-tests/src/types/: fork_choice.rs  justifiability.rs  mod.rs  slot_clock.rs  ssz.rs  ssz_test.rs  state_transition.rs  sync.rs  verify_signatures.rs
testing/lean-spec-tests/tests/: tests.rs
testing/lean-tests/: Cargo.toml
testing/lean-tests/tests/: block_production.rs  state.rs
testing/mock-execution-engine/: Cargo.toml
testing/mock-execution-engine/src/: block_generator.rs  handle_rpc.rs  lib.rs  server.rs
testing/test_utils/: Cargo.toml
testing/test_utils/src/: store.rs
(+665 files in other folders)
