[package]
name = "ream-rpc"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
enr.workspace = true
discv5.workspace = true
futures.workspace = true
hex.workspace = true
libp2p-identity.workspace = true
libp2p-mplex.workspace = true
libp2p.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
warp.workspace=true
clap.workspace=true
thiserror.workspace=true
