[package]
name = "ream-storage"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# ream dependencies
ream-utils.workspace = true

# other dependencies
anyhow.workspace = true
redb.workspace = true
thiserror.workspace = true
tracing.workspace = true


