[package]
name = "ream-storage"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
devnet1 = ["ream-consensus-lean/devnet1"]
devnet2 = ["ream-consensus-lean/devnet2"]

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
directories.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
lru.workspace = true
ream-bls.workspace = true
redb.workspace = true
snap.workspace = true
ssz_types.workspace = true
tempdir.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tree_hash.workspace = true

# ream dependencies
ream-consensus-beacon.workspace = true
ream-consensus-lean.workspace = true
ream-consensus-misc.workspace = true
ream-execution-rpc-types.workspace = true
ream-light-client.workspace = true
ream-post-quantum-crypto.workspace = true

[lints]
workspace = true
