[package]
name = "beacon-api-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
thiserror = "1.0"
anyhow = "1.0"
alloy-primitives = "0.1.0"
jsonschema = "0.17"

# ream
ream-beacon-api-types.workspace = true
ream-consensus.workspace = true
