[package]
name = "ef-tests"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["devnet1"]
devnet1 = ["ream-consensus-lean/devnet1"]
devnet2 = ["ream-consensus-lean/devnet2"]
ef-tests = []

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
paste = "1.0.15"
rstest.workspace = true
serde.workspace = true
serde_yaml.workspace = true
snap.workspace = true
ssz_types.workspace = true
tokio.workspace = true
tree_hash.workspace = true

# ream dependencies
ream-bls.workspace = true
ream-consensus-beacon = { workspace = true, features = ["test_consensus"] }
ream-consensus-lean.workspace = true
ream-consensus-misc.workspace = true
ream-execution-engine.workspace = true
ream-execution-rpc-types.workspace = true
ream-fork-choice-beacon.workspace = true
ream-merkle.workspace = true
ream-network-spec.workspace = true
ream-storage.workspace = true

[lints]
workspace = true
