[package]
name = "ef-tests"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["devnet4"]
devnet4 = [
    "ream-consensus-lean/devnet4",
    "ream-storage/devnet4",
    "ream-consensus-misc/devnet4",
]
devnet5 = [
    "ream-consensus-lean/devnet5",
    "ream-storage/devnet5",
    "ream-consensus-misc/devnet5",
]
ef-tests = []

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
const-hex.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
paste = "1.0.15"
rstest.workspace = true
rust_eth_kzg.workspace = true
serde.workspace = true
serde_yaml.workspace = true
snap.workspace = true
ssz_types.workspace = true
tokio.workspace = true
tree_hash.workspace = true

# ream dependencies
ream-bls.workspace = true
ream-consensus-beacon = { workspace = true, features = ["test_consensus"] }
ream-consensus-lean.workspace = true
ream-consensus-misc.workspace = true
ream-execution-engine.workspace = true
ream-execution-rpc-types.workspace = true
ream-fork-choice-beacon.workspace = true
ream-merkle.workspace = true
ream-network-spec.workspace = true
ream-polynomial-commitments.workspace = true
ream-storage.workspace = true

[lints]
workspace = true
