[package]
name = "gossip-validation"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
devnet3 = ["ream-consensus-lean/devnet3", "ream-p2p/devnet3", "ream-storage/devnet3"]
devnet4 = ["ream-consensus-lean/devnet4", "ream-p2p/devnet4", "ream-storage/devnet4"]

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
serde.workspace = true
serde_json.workspace = true
snap.workspace = true
tempdir.workspace = true
tokio.workspace = true

# ream
ream-chain-beacon.workspace = true
ream-consensus-beacon.workspace = true
ream-consensus-lean.workspace = true
ream-consensus-misc.workspace = true
ream-network-manager = { workspace = true, features = ["disable_ancestor_validation"] }
ream-network-spec.workspace = true
ream-operation-pool.workspace = true
ream-p2p.workspace = true
ream-storage.workspace = true
ream-sync-committee-pool.workspace = true

[lints]
workspace = true

