[package]
name = "gossip-validation"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["devnet5"]
devnet5 = ["ream-consensus-lean/devnet5", "ream-p2p/devnet5", "ream-storage/devnet5"]
optimized-leanvm = [
    "ream-network-spec/optimized-leanvm",
    "devnet5",
    "ream-chain-beacon/optimized-leanvm",
    "ream-consensus-lean/optimized-leanvm",
    "ream-network-manager/optimized-leanvm",
    "ream-p2p/optimized-leanvm",
    "ream-storage/optimized-leanvm",
    "ream-sync-committee-pool/optimized-leanvm",
]

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
serde.workspace = true
serde_json.workspace = true
snap.workspace = true
tempdir.workspace = true
tokio.workspace = true

# ream
ream-chain-beacon.workspace = true
ream-consensus-beacon.workspace = true
ream-consensus-lean.workspace = true
ream-consensus-misc.workspace = true
ream-network-manager = { workspace = true, features = ["disable_ancestor_validation"] }
ream-network-spec.workspace = true
ream-operation-pool.workspace = true
ream-p2p.workspace = true
ream-storage.workspace = true
ream-sync-committee-pool.workspace = true

[lints]
workspace = true

