[package]
name = "lean-spec-tests"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
lean-spec-tests = []
default = ["devnet3"]
devnet3 = [
    "ream-consensus-lean/devnet3",
    "ream-consensus-misc/devnet3",
    "ream-fork-choice-lean/devnet3",
    "ream-storage/devnet3",
]
devnet4 = [
    "ream-consensus-lean/devnet4",
    "ream-consensus-misc/devnet4",
    "ream-fork-choice-lean/devnet4",
    "ream-storage/devnet4",
]

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ssz = { package = "ethereum_ssz", version = "0.10" }
ssz_derive = { package = "ethereum_ssz_derive", version = "0.10" }
ssz_types.workspace = true
tokio.workspace = true
tracing.workspace = true
tree_hash.workspace = true

# ream dependencies
ream-consensus-lean.workspace = true
ream-consensus-misc.workspace = true
ream-fork-choice-lean.workspace = true
ream-network-spec.workspace = true
ream-post-quantum-crypto.workspace = true
ream-storage.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
