[package]
name = "lean-tests"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
serde.workspace = true
serde_json.workspace = true
snap.workspace = true
ssz_types.workspace = true
tempdir.workspace = true
tokio.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

# ream
ream-consensus-lean.workspace = true
ream-consensus-misc.workspace = true
ream-fork-choice-lean.workspace = true
ream-network-spec.workspace = true
ream-network-state-lean.workspace = true
ream-post-quantum-crypto.workspace = true
ream-storage.workspace = true

[lints]
workspace = true

