[package]
name = "ream-mock-execution-engine"
description = "Mock Ethereum execution engine JSON-RPC server for Ream tests."
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
actix-web.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ssz_types.workspace = true
tokio.workspace = true
tree_hash.workspace = true
url.workspace = true

# ream dependencies
ream-execution-rpc-types.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true

# ream dependencies
ream-execution-engine.workspace = true

[lints]
workspace = true
