[package]
name = "ream-test-utils"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["devnet3"]
devnet3 = [
    "ream-consensus-lean/devnet3",
    "ream-fork-choice-lean/devnet3",
    "ream-storage/devnet3",
]
devnet4 = [
    "ream-consensus-lean/devnet4",
    "ream-fork-choice-lean/devnet4",
    "ream-storage/devnet4",
]

[dependencies]
ssz_types.workspace = true
tree_hash.workspace = true

# ream dependencies
ream-consensus-lean.workspace = true
ream-fork-choice-lean.workspace = true
ream-network-spec.workspace = true
ream-post-quantum-crypto.workspace = true
ream-storage.workspace = true

[lints]
workspace = true
