[package]
name = "ream-da-node"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing = { workspace = true, features = ["log"] }

# ream dependencies
ream-da.workspace = true
ream-executor.workspace = true

[lints]
workspace = true
