[package]
name = "ream-metrics"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["devnet4"]
devnet4 = []

[dependencies]
lazy_static.workspace = true
prometheus_exporter.workspace = true

[lints]
workspace = true
