[package]
name = "ream-node"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow.workspace = true
ethereum_serde_utils.workspace = true
serde.workspace = true

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl", "rustc"] }
