[package]
name = "ream-node"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
libp2p.workspace = true
serde.workspace = true

[build-dependencies]
vergen = { version = "9.0", features = ["build", "cargo", "emit_and_set", "rustc"] }
vergen-git2 = "1.0"
