[package]
name = "reth-engine"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tokio.workspace = true
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "9384bc53d8c0c77e59cac83fdaaf3b372c6d2216", features = [
    "node",
    "test-utils",
] }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "9384bc53d8c0c77e59cac83fdaaf3b372c6d2216" }
alloy-genesis = "2.1.0"
alloy-primitives.workspace = true
sha2.workspace = true
futures-util = "0.3.32"
eyre = "0.6.12"
serde_json.workspace = true
alloy-rpc-types-engine = "1.6.3"


[lints]
workspace = true
