[package]
name = "ream-sync-committee-pool"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
parking_lot.workspace = true
serde.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tracing.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

# ream-dependencies
ream-bls.workspace = true
ream-validator-beacon.workspace = true
