[package]
name = "task_executor"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true}
futures = {workspace = true}
async-channel = {workspace = true}