[package]
name = "ream-post-quantum-crypto"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
devnet4 = []
devnet5 = []

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
lean-multisig.workspace = true
leansig.workspace = true
rand_0_10 = { package = "rand", version = "0.10" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, features = ["log"] }
tree_hash.workspace = true
tree_hash_derive.workspace = true

[lints]
workspace = true
