[package]
name = "ream-da-errors"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
thiserror.workspace = true

[lints]
workspace = true
