[package]
name = "ream-da-networking"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
alloy-primitives.workspace = true
discv5.workspace = true
ethereum_ssz.workspace = true
libp2p.workspace = true
rust_eth_kzg.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

# ream dependencies
ream-consensus-beacon.workspace = true
ream-consensus-misc.workspace = true
ream-da-storage.workspace = true
ream-discv5.workspace = true
ream-executor.workspace = true
ream-network-manager.workspace = true
ream-network-spec.workspace = true
ream-p2p.workspace = true
ream-polynomial-commitments.workspace = true
ream-req-resp.workspace = true

[lints]
workspace = true
