[package]
name = "ream-discv5"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# ream dependencies
ream-network-types = { workspace = true }

discv5 = { workspace = true }
futures = { workspace = true }
libp2p-identity = { workspace = true }
libp2p-mplex = { workspace = true }
libp2p = { version = "0.54.1", default-features = false, features = ["identify", "yamux", "noise", "dns", "tcp", "tokio", "plaintext", "secp256k1", "macros", "ecdsa", "metrics", "quic", "upnp", "gossipsub", "ping"] }
