[package]
name = "ream-discv5"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
discv5.workspace = true
futures.workspace = true
libp2p.workspace = true
tokio.workspace = true
tracing.workspace = true

# external crates 
ethereum_ssz = "0.9.0"
ethereum_ssz_derive = "1.0.0-beta.2"

# ream dependencies
ream-consensus.workspace = true
ream-network-spec = { path = "../../common/network_spec" }