[package]
name = "ream-gossipsub"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
hex.workspace = true
libp2p.workspace = true
sha2.workspace = true
snap.workspace = true
