[package]
name = "ream-p2p"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
discv5 = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
task_executor = { workspace = true }
hex = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }

libp2p-identity = "0.2.10"
libp2p-mplex = "0.42"


[dependencies.libp2p]
version = "0.54.1"
default-features = false
features = ["identify", "yamux", "noise", "dns", "tcp", "tokio", "plaintext", "secp256k1", "macros", "ecdsa", "metrics", "quic", "upnp", "gossipsub", "ping"]