[package]
name = "ream-p2p"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
discv5 = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
libp2p-identity = "0.2.10"
libp2p-mplex = "0.42.0"
libp2p = { version = "0.54.1", default-features = false, features = ["identify", "yamux", "noise", "dns", "tcp", "tokio", "plaintext", "secp256k1", "macros", "ecdsa", "metrics", "quic", "upnp", "gossipsub", "ping"] }
ream-executor = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
