[package]
name = "ream-syncer"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
devnet5 = ["ream-storage/devnet5", "ream-p2p/devnet5"]
optimized-leanvm = [
    "ream-network-spec/optimized-leanvm",
    "devnet5",
    "ream-chain-beacon/optimized-leanvm",
    "ream-p2p/optimized-leanvm",
    "ream-req-resp/optimized-leanvm",
    "ream-storage/optimized-leanvm",
]

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
ethereum_ssz.workspace = true
futures.workspace = true
libp2p.workspace = true
libp2p-identity.workspace = true
libp2p-mplex.workspace = true
tokio.workspace = true
tracing.workspace = true
tree_hash.workspace = true

# ream dependencies
ream-bls.workspace = true
ream-chain-beacon.workspace = true
ream-consensus-beacon.workspace = true
ream-consensus-misc.workspace = true
ream-executor.workspace = true
ream-network-spec.workspace = true
ream-p2p.workspace = true
ream-req-resp.workspace = true
ream-storage.workspace = true

[lints]
workspace = true
